--- a/hello.html
+++ b/hello.html
@@ -1,2 +1,20 @@
 <!DOCTYPE html> 
 <html>
+    <head>
+        <title>My web page!</title>
+        <style>
+             div {background-color: teal;
+                width: 500px;
+                height:400px;
+                padding: 20px;
+                margin: 20px}
+        </style>
+        <link rel="stylesheet" href="Untitled-2.css" />
+    </head>
+    <body>
+        <div> Hello, world</div>
+        <h1> Welcome to my Web page!</h1>
+        <h1> Here is a second headline</h1>
+    <div>  <p> Hello, world! This is a paragraph of text.</p>
+        <p> This is another paragraph!</p></div>  
+    </body>
